# voxel-raymarching

./: Cargo.toml  README.md  renderdoc.cap
app/: Cargo.toml  build.rs
app/assets/: monu2.vox
app/src/: app.rs  config.rs  main.rs
app/src/core/: buffers.rs  camera.rs  engine.rs  input.rs  mod.rs  noise.rs  renderer.rs  timing.rs  transform.rs
app/src/engine/: camera.rs  core.rs  input.rs
app/src/renderer/: brick_tree.rs  buffers.rs  core.rs  gltf_viewer.rs  loader.rs  mesh.rs  mod.rs  noise.rs  oil.rs  palette.rs  timing.rs  utils.rs
app/src/shaders/: ambient.wgsl  atrous.wgsl  deferred.wgsl  fx.wgsl  lighting_resolve.wgsl  model_test.wgsl  normal_blur.wgsl  palette_lut.wgsl  raymarch.wgsl  raymarch_basic.wgsl  resolve.wgsl  shadow.wgsl  specular.wgsl  specular_resolve.wgsl  taa.wgsl  tree.wgsl  visible_indirect_args.wgsl  voxelize.wgsl
app/src/ui/: core.rs  debug.rs  mod.rs  renderer.rs
app/src/utils/layout/: ext.rs  storage_buffer.rs  uniform_buffer.rs
generate/: Cargo.toml
generate/src/: lib.rs  lightmaps.rs  main.rs  models.rs  models_new.rs  models_t64.rs  palette.rs  planet.rs
json/: material.pbrMetallicRoughness.schema.json
loader/: Cargo.toml
loader/src/: lib.rs  main.rs  voxelize.rs
models/: Cargo.toml  sponza_out.txt
models/src/: main.rs  scene.rs  schema.rs
src/: app.rs  camera.rs  input.rs  main.rs  mesh.rs  model.rs
src/engine/: camera.rs  core.rs  input.rs  mod.rs  model.rs
src/renderer/: brick_tree.rs  buffers.rs  core.rs  mesh.rs  mod.rs  nested_tree.rs
src/shaders/: main.wgsl
utils/: Cargo.toml
vox/: Cargo.toml
(+28 files in other folders)
