[workspace]
members = ["app", "generate", "utils"]
default-members = ["app"]
resolver = "2"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui", rev = "8b2315375b6cf13291ee658a498cb45fc379f600" }
egui-wgpu = { git = "https://github.com/emilk/egui", rev = "8b2315375b6cf13291ee658a498cb45fc379f600" }
egui-winit = { git = "https://github.com/emilk/egui", rev = "8b2315375b6cf13291ee658a498cb45fc379f600" }
