[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
clap = { version = "4.5.57", features = ["derive"] }
glam = { version = "0.31.0", features = ["serde"] }
image = { version = "0.25.9", features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
